--- a/report.tex
+++ b/report.tex
@@ -80,7 +80,7 @@ Turbulence intensity can rise in regions with abrupt roughness change, referenci
 \section{Straight Channels}
 
 \subsection{Flow Regime}
-At microfluidic length scales, Reynolds number is typically $\text{Re} \ll 2000$, so laminar flow is expected. Straight, smooth streaklines and absence of mixing confirm laminar behavior.
+At microfluidic length scales, Reynolds number is typically $\text{Re} \ll 2000$, so laminar flow is expected. As seen in the captured images from the microfluidics lab, the smooth streaklines confirm laminar flow behavior in the straight tube section.
 
 \subsection{Velocity Maximum and Gradient}
 For pressure‐driven flow, maximum velocity occurs at channel centerline; the velocity gradient is largest near walls where no‐slip applies.  
