--- a/report.tex
+++ b/report.tex
@@ -9,7 +9,7 @@
 \usepackage{enumitem}
 
 \title{AER210 Microfluidics Laboratory Report}
-\author{<Name> \\ <Student Number>}
+\author{Nicholas Nguyen \\ 1010900474}
 \date{\today}
 
 \begin{document}
