--- a/report.tex
+++ b/report.tex
@@ -88,8 +88,16 @@ This matches theoretical parabolic Poiseuille flow.
 APG boundary‐layer effects are not expected to play major roles in a straight microchannel.
 
 \subsection{Velocity Profile (Data Required)}
-\textbf{To be completed when data is available.}
+\usepackage{graphicx}
+\graphicspath{{images/}}
 
+\begin{document}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\textwidth]{Velocity Profile.png}
+    \caption{Example image}
+\end{figure}
+\end{document}
 \subsection{Expected Curve Type}
 Theoretically, a parabolic velocity profile is expected for laminar channel flow.
 
