--- a/report.tex
+++ b/report.tex
@@ -94,7 +94,7 @@ APG boundary‐layer effects are not expected to play major roles in a straight 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.6\textwidth]{Velocity Profile.png}
-    \caption{Example image}
+    \caption{Velocity measurements of streaks at certain distances from the lower boundary of the straight channel. Parabola fitted to better depict the velocity profile.}
 \end{figure}
 
 \subsection{Expected Curve Type}
