--- a/report.tex
+++ b/report.tex
@@ -83,6 +83,12 @@ Turbulence intensity can rise in regions with abrupt roughness change, referenci
 \subsection{Flow Regime}
 At microfluidic length scales, Reynolds number is typically $\text{Re} \ll 2000$, so laminar flow is expected. As seen in the captured images from the microfluidics lab, the smooth streaklines confirm laminar flow behavior in the straight tube section.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\textwidth]{straight.png}
+    \caption{Straight channel streak visualization}
+\end{figure}
+
 \subsection{Velocity Maximum and Gradient}
 For pressure‐driven flow, maximum velocity occurs at channel centerline; the velocity gradient is largest near walls where no‐slip applies.  
 This matches theoretical parabolic Poiseuille flow.  
