--- a/report.tex
+++ b/report.tex
@@ -85,7 +85,7 @@ At microfluidic length scales, Reynolds number is typically $\text{Re} \ll 2000$
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.6\textwidth]{straight.png}
+    \includegraphics[width=0.6\textwidth]{str.png}
     \caption{Straight channel streak visualization}
 \end{figure}
 
