--- a/report.tex
+++ b/report.tex
@@ -94,7 +94,7 @@ For pressure‐driven flow, maximum velocity occurs at channel centerline; the v
 This matches theoretical parabolic Poiseuille flow.  
 APG boundary‐layer effects are not expected to play major roles in a straight microchannel.
 
-\subsection{Velocity Profile (Data Required)}
+\subsection{Velocity Profile)}
 
 
 \begin{figure}[h]
@@ -115,8 +115,13 @@ Mean velocity may be increased by:
 \end{itemize}
 Bernoulli's equation shows velocity increase is proportional to pressure difference.
 
-\subsection{Velocity vs.\ Syringe Height (Data Required)}
-\textbf{To be completed when data is available.}
+\subsection{Velocity vs.\ Syringe Height}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\textwidth]{height.png}
+    \caption{Velocity measurements taken at the same point in the center of the straight channel, with four varying heights of the syringe.}
+\end{figure}
+
 
 \subsection{Hagen–Poiseuille: Symbolic Relationship}
 Hagen–Poiseuille gives
@@ -127,7 +132,7 @@ Since $\Delta p = \rho g z_1$,
 \[
 U_3 \propto z_1.
 \]
-Thus, fluid velocity in the straight channel is expected to grow linearly with syringe height.
+Thus, fluid velocity in the straight channel is expected to grow linearly with syringe height, which can be seen with the fitted trendline in the previous graph.
 
 \subsection{Bonus: Bernoulli Relation}
 Torricelli’s law:
