--- a/report.tex
+++ b/report.tex
@@ -99,7 +99,7 @@ APG boundary‐layer effects are not expected to play major roles in a straight 
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.6\textwidth]{Velocity Profile.png}
+    \includegraphics[width=0.7\textwidth]{Velocity Profile.png}
     \caption{Velocity measurements of streaks at certain distances from the lower boundary of the straight channel. Parabola fitted to better depict the velocity profile.}
 \end{figure}
 
@@ -118,7 +118,7 @@ Bernoulli's equation shows velocity increase is proportional to pressure differe
 \subsection{Velocity vs.\ Syringe Height}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.6\textwidth]{height.png}
+    \includegraphics[width=0.7\textwidth]{height.png}
     \caption{Velocity measurements taken at the same point in the center of the straight channel, with four varying heights of the syringe.}
 \end{figure}
 
@@ -162,13 +162,32 @@ For a fixed height channel, area ratio approximates width ratio:
 \[
 \frac{U_2}{U_1} \approx \frac{W_1}{W_2}.
 \]
-This assumes Newtonian behavior.
+This assumes Newtonian behavior. Thus, with a starting width of 241.197 micrometers and a expansion width of 507.619 micrometers, the theoretical centerline flow velocity ratio is approximately 2.105.
 
 \subsection{Measured Ratio (Data Required)}
-\textbf{To be completed when data is available.}
+Before the expansion, the measured velocity was 1005.823 micrometers/second, after the expansion, it is measured at 408.012 micrometers/second. This yields a velocity ratio of 2.465, which generally agrees with the theoretically calculated value.
 
 \subsection{Flow Features}
-Abrupt contractions create separated regions and recirculation; gradual transitions suppress separation and produce more ordered streaklines.
+Abrupt contractions create separated regions and recirculation; gradual transitions suppress separation and produce more ordered streaklines. In the abrupt transition, there are pockets of turbulent/circular flow at the edges of the expansion chamber. The differences can be clearly seen in the two following figures.
+
+\begin{figure}[h]
+    \centering
+
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{smooth.png}
+        \caption{Smooth expansion}
+        \label{fig:1}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{sharp diverge.png}
+        \caption{Abrupt expansion}
+        \label{fig:2}
+    \end{minipage}
+
+\end{figure}
 
 \subsection{Turbulence}
 Given Re $\ll 2000$, turbulent flow is unlikely; streaklines should remain smooth. Localized disturbances do not constitute sustained turbulence.
