--- a/report.tex
+++ b/report.tex
@@ -199,8 +199,7 @@ Smooth transitions reduce pressure loss and unsteadiness. Synthetic jets provide
 \section{Channels with Bends}
 
 \subsection{Velocity Change}
-Theory expects nearly unchanged centerline speed if cross‐section remains constant; curvature may induce secondary Dean vortices. For the sharp bend channel, velocity before the bend was measured at 714.988 micrometers/second with valocity after the bend of 528.127 micrometers/second. For the curved bend channel, centerline velocities were measured at 560.019 micrometers/second and 694.1 micrometers/second before and after the bend, respectively. The discrepancy in flow velocities comes from the generated Dean vortices, where lower velocity from the outer walls shifts toward the centerline and higher velocity flow shifts outwards, creating a more uniform flow velocity profile, and potentially resulting in the difference in measured velocity results.
-
+Theory expects nearly unchanged centerline speed if cross‐section remains constant. Curvature may induce secondary Dean vortices, resulting in flow velocity discrepancy. For the sharp bend channel, velocity before the bend was measured at 714.988 micrometers/second with valocity after the bend of 528.127 micrometers/second. For the curved bend channel, centerline velocities were measured at 560.019 micrometers/second and 694.1 micrometers/second before and after the bend, respectively.
 
 \subsection{Flow Features}
 Smooth bend → smooth pathlines;  
